# BotsOnRails

./: .gitattributes  .gitignore  404.html  LICENSE.txt  README.md  cov.xml  index.html  mkdocs.yml  pyproject.toml  sandbox.py  search.html  sitemap.xml
.github/workflows/: ci.yaml
BotsOnRails/: __about__.py  __init__.py  decorators.py  nodes.py  rails.py  stores.py  tree.py  types.py  utils.py
about/: index.html
docs/: about.md  index.md  loops.md  node_syntax.md  quickstart.md  resumable_workflows.md  scratch.py  validation.md
docs/examples/: test.py
docs/examples/content_moderation/: .gitignore  main.py  requirements.txt
docs/examples/llamaindex/: .gitignore  Digraph.gv  display.py  main.py  requirements.txt
docs/examples/marvin/: agent.py  credentials.json.sample  sample_doc.txt
examples/: test.py
examples/content_moderation/: .gitignore  credentials.json.env  main.py
examples/llamaindex/: .gitignore  main.py  models.py  test.py
examples/marvin/: Digraph.gv  agent.py  credentials.json.sample  requirements.txt  sample_doc.txt
loops/: index.html
nlx/: __about__.py  __init__.py  decorators.py  nodes.py  stores.py  tree.py  types.py  utils.py
node_syntax/: index.html
quickstart/: index.html
resumable_workflows/: index.html
search/: search_index.json
tests/: test_cycle_validations.py  test_for_each_router.py  test_function_type_checking.py  test_guardrails.py  test_node_routers.py  test_resumable_execution.py  test_tree_execution.py  test_tree_utilities.py  test_tree_validations.py  test_tree_visualizations.py
tests/fixtures/visualizations/: graphviz_visual.dot  tree_dump.json
validation/: index.html
