[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nlx"
dynamic = ["version"]
description = 'NLX makes it easy to write LLM-controlled programs without outsourcing all of the logic and decisions to stochastic models. It facilitates the seamless integration of function-based nodes into an execution tree, enabling conditional and sequential task execution tailored to complex, resumable processing flows.'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "JSv4", email = "scrudato@umich.edu" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic==2.6.*",
  "graphviz==0.20.*",
  "networkx==3.2.*",
  "matplotlib==3.8.*"
]

[project.urls]
Documentation = "https://github.com/unknown/nlx#readme"
Issues = "https://github.com/unknown/nlx/issues"
Source = "https://github.com/unknown/nlx"

[tool.hatch.version]
path = "nlx/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pytest-cov>=4"
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "pytest --cov app {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:nlx tests}"

[tool.coverage.run]
source_pkgs = ["nlx", "tests"]
branch = true
parallel = true
omit = [
  "nlx/__about__.py",
]

[tool.coverage.paths]
nlx = ["nlx", "*/nlx/nlx"]
tests = ["tests", "*/nlx/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
